--- a/package.json
+++ b/package.json
@@ -63,9 +63,10 @@
     "ngx-color-picker": "^15.0.0",
     "ngx-cookie-service": "^17.0.0",
     "ngx-countup": "^13.1.0",
-    "ngx-dropzone-wrapper": "^15.0.0",
+    "ngx-dropzone-wrapper": "^16.0.0",
     "ngx-echarts": "^17.1.0",
     "ngx-editor": "^16.0.1",
+    "ngx-file-drop": "^16.0.0",
     "ngx-mask": "^17.0.0",
     "ngx-masonry": "^14.0.1",
     "ngx-pipes": "^3.2.2",
